--- a/src/style.scss
+++ b/src/style.scss
@@ -705,6 +705,7 @@ body {
       padding: 16px 0 8px 8px;
       background: #6941C6;
       margin-bottom: 8px;
+      position: relative;
 
       @media (min-width: 1150px) {
          max-height: 400px;
@@ -713,30 +714,57 @@ body {
          padding: 0;
       }
    }
-}
 
-.guestbook .swiper-wrapper {
-   padding: 0 0 36px
-}
+   .swiper {
+      overflow: inherit;
+      position: static;
+   }
 
-.guestbook .swiper-slide {
-   max-width: 256px;
+   .swiper-wrapper {
+      padding: 0 0 36px
+   }
 
-   @media (min-width: 1150px) {
-      max-width: 552px;
-      max-height: 200px;
+   .swiper-slide {
+      max-width: 256px;
+
+      @media (min-width: 1150px) {
+         max-width: 552px;
+         max-height: 200px;
+      }
+   }
+
+   .swiper-pagination {
+      height: auto!important;
+      width: auto!important;
+   }
+
+   .swiper-vertical .swiper-pagination  {
+      transform: rotate(90deg);
+      display: flex;
+      justify-content: center;
+      right: -26px;
+      .swiper-pagination-bullet {
+         margin: 0 8px;
+      }
+   }
+   .swiper-horizontal .swiper-pagination {
+      bottom: 16px;
+   }
+
+   .swiper-pagination-bullet {
+      background-color: #FFFFFF;
+      opacity: 0.5;
+      position: static;
+      margin:0 8px;
+   }
+
+   .swiper-pagination-bullet-active {
+      background-color: #FFFFFF;
+      opacity: 1;
    }
 }
 
-.guestbook .swiper-pagination-bullet {
-   background-color: #FFFFFF;
-   opacity: 0.5;
- }
 
-.guestbook .swiper-pagination-bullet-active {
-   background-color: #FFFFFF;
-   opacity: 1;
- }
 
 .top-review {
    padding: 0 8px 24px 8px;
