--- a/src/style.scss
+++ b/src/style.scss
@@ -57,8 +57,16 @@ body {
       font-weight: 500;
       color: #101828;
 
+      @media (min-width:1150px) {
+         font-weight: 300;
+      }
+
       &--text-violet {
          color: #6941C6;
+
+         @media (min-width:1150px) {
+            font-weight: 700;
+         }
       }
    }
 
@@ -104,7 +112,6 @@ body {
    background-color: #9E77ED;
    padding: 8px 0 7px;
    min-height: 56px;
-   border-bottom: 1px solid #B692F6;
    display: flex;
    align-items: center;
    position: fixed;
@@ -125,11 +132,17 @@ body {
       position: relative;
       z-index: 99999;
       margin-right: auto;
+
+      .header-white-js & path {
+         fill: #6941C6;
+      }
    }
 }
 
 .header-white-js {
    background-color: #FFFFFF;
+   box-shadow: 0px 4px 8px -2px rgba(16, 24, 40, 0.1),
+               0px 0px 4px -2px rgba(16, 24, 40, 0.06);
 }
 
 .nav {
@@ -141,16 +154,58 @@ body {
       position: relative;
       align-self: center;
       z-index: 999999;
+      transition: 0.3s;
+      cursor: pointer;
+
+      &:hover,
+      &:focus-within {
+         svg path {
+            fill: #6941C6;
+         }
+      }
+
+      .header-white-js & path {
+         fill: #101828;
+      }
    }
 
    &__link {
       display: none;
 
       @media (min-width: 992px) {
-         display: block;
+         display: flex;
+         align-items: center;
+         gap: 8px;
+         font-weight: 500;
          border: 1px solid #FFFFFF;
-         padding: 10px 16px;
+         padding: 12px 18px;
          flex-shrink: 0;
+         transition: 0.3s;
+         
+         &:hover,
+         &:focus-within {
+         color: #6941C6;
+         background-color: #FFFFFF;
+
+            svg path {
+               fill: #6941C6;
+            }
+         }
+
+         .header-white-js & {
+            background-color: #6941C6;
+
+            &:hover,
+            &:focus-within {
+            color: #6941C6;
+            background-color: #FFFFFF;
+            border-color: #6941C6;
+
+               svg path {
+                  fill: #6941C6;
+               }
+            } 
+         }
       }
    }
 
@@ -177,6 +232,10 @@ body {
          width: 100%;
          transition: all 0.3s ease 0s;
          background-color: #FFFFFF;
+
+         .header-white-js & {
+            background-color: #101828;
+         }
       }
 
       &::before,
@@ -225,12 +284,17 @@ body {
    left: 100%;
    width: 100%;
    height: 100%;
-   padding: 60px 0 50px;
+   padding: 75px 16px 0;
    background-color: #FFFFFF;
    color: #101828;
    transition: 0.3s;
    overflow: auto;
    z-index: 9999;
+   overflow-x: hidden;
+
+   @media (min-width: 768px) {
+      padding: 91px 32px 0;
+   }
 
    @media (min-width: 992px) {
       flex-direction: row;
@@ -264,44 +328,217 @@ body {
       @media (min-width: 992px) {  
          display: none;
       }
+
+      .header-white-js & {
+         background-color: #FFFFFF;
+      }
    }
 
    &__item {
       font-size: 16px;
       line-height: 1.5;
       font-weight: 500;
+      cursor: pointer;
+
+      @media (max-width: 992px) {
+         &:not(:nth-of-type(4)) {
+            padding-bottom: 16px;
+            border-bottom: 1px solid #E4E7EC;
+            margin-bottom: 16px;
+         }
+      }
+
+      &--violet {
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         background-color: #6941C6;
+         font-size: 20px;
+         line-height: 1.4;
+         font-weight: 500;
+         color: #FFFFFF !important;
+         padding: 16px;
+         border: none;
+         margin-bottom: 0 !important;
+         margin-top: auto;
+         margin-left: -16px;
+         width: calc(100% + 32px);
+
+         @media (min-width: 768px) {
+            margin-left: -32px;
+            width: calc(100% + 64px);
+         }
+
+         @media (min-width: 992px) {
+            display: none;
+         }
+
+         &::after {
+            content: '';
+            display: inline-block;
+            width: 18px;
+            height: 18px;
+            background-image: url(images/header/arrow-right.svg);
+            background-repeat: no-repeat;
+            background-size: 18px;
+         }
+      }
+
+      &--has-child {
+
+         @media (max-width: 992px) {
+            display: flex;
+            justify-content: space-between;
+
+            &::after {
+               content: '';
+               display: inline-block;
+               width: 16px;
+               height: 16px;
+               background-image: url(images/header/black-arrow-right.svg);
+               background-repeat: no-repeat;
+               vertical-align: middle;
+            }
+         }
+      }
+
       .header-white-js & {
-         color: #000;
+         color: #101828;
+         transition: 0.4s;
+
+         &:hover,
+         &:focus-within {
+         color: #6941C6;
+            
+            svg {
+               transform: rotate(180deg);
+            }
+
+            svg path {
+               fill: #6941C6;
+            }
+         }
+      }
+
+      & svg {
+         margin-left: 5px;
+         vertical-align: middle;
+         transition: 0.4s;
+
+         @media (max-width:992px) {
+            display: none;
+         }
+      }
+
+      .header-white-js & path {
+         fill: #101828;
       }
    }
 
    &__link {
+      &:hover,
+      &:focus-within {
+         color: #6941C6;
+      }
    }
 }
+
 .popup-menu {
    position: absolute;
-   z-index: -9999;
-   visibility: hidden;
-   opacity: 0;
+   z-index: 9999;
+   left: 100%;
    transition: 0.3s;
    width: 100%;
-   background: firebrick;
-   top: 95px;
+   top: 59px;
+
+   @media (min-width:992px) {
+      top: 92px;
+   }
 
    &.open-js {
-      z-index: 9999;
-      visibility: visible;
-      opacity: 1;
+      left: 0;
    }
-   &__item {
+
+   &__section {
+      transition: 0.3s;
       display: none;
-      font-size: 35px;
-      color: #fff;
+      left: 100%;
+
       &.open-js {
          display: block;
+         left: 0;
+      }
+   }
+}
+
+.top-services {
+
+   &__section {
+      font-weight: 500;
+      padding: 16px;
+      color: #101828;
+      background-color: #FFFFFF;
+   }
+
+   &__btn {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      width: 100%;
+      font-size: 16px;
+      line-height: 1.5;
+      margin-bottom: 16px;
+
+      &::before {
+         content: '';
+         display: inline-block;
+         width: 16px;
+         height: 16px;
+         background-image: url(images/header/black-arrow-right.svg);
+         background-repeat: no-repeat;
+         background-size: 16px;
+         transform: rotate(180deg);
       }
    }
 
+   &__item {
+      position: relative;
+      border: 1px solid #E4E7EC;
+      padding: 16px;
+
+      &:not(:last-child) {
+         margin-bottom: 8px;
+      }
+   }
+
+   &__link {
+
+      &::before {
+         position: absolute;
+         top: 0;
+         left: 0;
+         content: '';
+         display: block;
+         width: 100%;
+         height: 100%;
+      }
+   }
+
+   &__span {
+      font-size: 11px;
+      line-height: 1.45;
+      text-transform: uppercase;
+      color: #667085;
+   }
+
+   &__title {
+      font-size: 14px;
+      line-height: 1.43;
+   }
+
+   &__title--violet {
+      color: #6941C6;
+   }
 }
 // =======HERO===========
 
@@ -312,6 +549,7 @@ body {
    background-repeat: no-repeat;
    background-size: contain;
    background-position: right bottom;
+   border-top: 1px solid #B692F6;
 
    @media (min-width: 650px) {
       background-size: auto;
@@ -398,7 +636,18 @@ body {
       font-weight: 500;
       color: #6941C6;
       background-color: #FFFFFF;
-      
+      border: 1px solid #FFFFFF;
+      transition: 0.4s;
+
+      &:hover,
+      &:focus-within {
+         background-color: #9E77ED;
+         color: #FFFFFF;
+
+         svg path {
+            fill: #FFFFFF;
+         }
+      }
 
       @media (min-width: 650px) {
          max-width: 257px;
@@ -410,6 +659,7 @@ body {
          font-size: 20px;
          line-height: 1.4;
          bottom: 32px;
+         padding: 16px 32px;
       }
 
       & svg {
@@ -619,13 +869,25 @@ body {
       font-weight: 500;
       color: #FFFFFF;
       background-color: #6941C6;
+      outline: 1px solid #6941C6;
       padding: 10px 16px;
       display: flex;
       align-items: center;
+      transition: 0.5s;
 
       & svg {
          margin-left: 10px;
          transform: rotate(-45deg);
+      }
+
+      &:hover,
+      &:focus-within {
+         background-color: #FFFFFF;
+         color: #6941C6;
+
+         svg path {
+            fill: #6941C6;
+         }
       }
    }
 
@@ -633,6 +895,12 @@ body {
       font-size: 14px;
       line-height: 1.43;
       color: #6941C6;
+      transition: 0.5s;
+
+      &:hover,
+      &:focus-within {
+         color: #101828;
+      }
    }
 }
    
@@ -1191,6 +1459,13 @@ body {
       display: flex;
       flex-direction: column;
       gap: 8px;
+
+      @media (min-width: 850px) {
+         flex-direction: row;
+         border: 1px solid #98A2B3;
+         padding: 25px;
+         gap: 32px;
+      }
    }
 
    &__email {
@@ -1200,6 +1475,15 @@ body {
       background-color: #FFFFFF;
       border: 1px solid #98A2B3;
       padding: 16px;
+      outline: none;
+
+      @media (min-width: 850px) {
+         border: none;
+         font-size: 30px;
+         line-height: 1.3;
+         width: 100%;
+         padding: 0;
+      }
    }
 
    &__btn {
@@ -1212,7 +1496,12 @@ body {
       color: #FFFFFF;
       background-color: #6941C6;
       padding: 16px;
-      transition: 0.3;
+      transition: 0.3s;
+
+      @media (min-width: 850px) {
+         padding: 16px 32px;
+         gap: 16px;
+      }
 
       &:hover,
       &:focus-within {
